--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "virtual-event-starter-kit",
-  "description": "Starter kit for your virtual event.",
+  "name": "av-palooza",
+  "description": "AV palooza virtual event",
   "private": true,
-  "repository": "vercel/virtual-event-starter-kit",
-  "author": "Vercel Inc.",
-  "homepage": "https://demo.vercel.events",
+  "author": "Aginic Ventures",
+  "homepage": "https://aginic.ventures",
   "license": "Apache-2.0",
   "engines": {
-    "node": "^14"
+    "node": "^18"
   },
   "scripts": {
     "dev": "next",
@@ -16,34 +15,31 @@
     "license": "addlicense -l apache -c 'Vercel Inc.' components/**/* lib/**/* pages/**/* styles/**/* *.ts *.js"
   },
   "dependencies": {
-    "@100mslive/react-icons": "^0.0.6",
-    "@100mslive/react-sdk": "^0.0.6",
+    "@100mslive/react-icons": "^0.8.10",
+    "@100mslive/react-sdk": "^0.8.10",
     "@agility/content-fetch": "1.1.1",
     "@agility/content-sync": "1.0.3",
-    "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "@radix-ui/react-dialog": "0.1.5",
-    "@radix-ui/react-dropdown-menu": "0.1.4",
-    "@radix-ui/react-tabs": "0.1.4",
-    "@reach/skip-nav": "0.12.1",
+    "@hcaptcha/react-hcaptcha": "^1.8.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@supabase/supabase-js": "^1.35.4",
-    "chrome-aws-lambda": "10.1.0",
     "classnames": "2.2.6",
     "cookie": "0.4.1",
     "date-fns": "2.16.1",
     "htmlescape": "1.1.1",
     "intersection-observer": "0.12.0",
-    "ioredis": "4.19.4",
+    "ioredis": "^5.3.2",
     "ms": "2.1.3",
-    "next": "^12.0.10",
+    "next": "^13.4.12",
     "nprogress": "0.2.0",
-    "puppeteer-core": "5.5.0",
-    "react": "^18.0.0-rc.0",
-    "react-aria": "3.2.0",
-    "react-dom": "^18.0.0-rc.0",
+    "react": "^18.2.0",
+    "react-aria": "^3.26.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0",
     "smoothscroll-polyfill": "0.4.4",
-    "swr": "0.3.9",
-    "validator": "13.5.2",
+    "swr": "^2.2.0",
+    "validator": "^13.9.0",
     "vanilla-tilt": "1.7.0"
   },
   "devDependencies": {
@@ -54,7 +50,6 @@
     "@types/ms": "0.7.31",
     "@types/node": "12.19.8",
     "@types/nprogress": "0.2.0",
-    "@types/puppeteer-core": "2.0.0",
     "@types/reach__skip-nav": "0.1.1",
     "@types/react": "17.0.0",
     "@types/smoothscroll-polyfill": "0.3.1",
@@ -72,6 +67,6 @@
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
     "tailwindcss": "^3.0.1",
-    "typescript": "4.3.2"
+    "typescript": "^5.1.6"
   }
 }
